[gd_scene load_steps=7 format=2]

[ext_resource path="res://Battlefield.tscn" type="PackedScene" id=1]
[ext_resource path="res://PC_Baqi.tscn" type="PackedScene" id=2]
[ext_resource path="res://PC_RaKit.tscn" type="PackedScene" id=3]
[ext_resource path="res://PC_Senn.tscn" type="PackedScene" id=4]
[ext_resource path="res://Battle_EXAMPLE.gd" type="Script" id=5]
[ext_resource path="res://NPC_ExEnemy.tscn" type="PackedScene" id=6]

[node name="BattleContainer" type="Node2D"]

[node name="Battlefield" parent="." instance=ExtResource( 1 )]
z_index = 0
script = ExtResource( 5 )

[node name="PC_Baqi" parent="Battlefield" instance=ExtResource( 2 )]

[node name="PC_RaKit" parent="Battlefield" instance=ExtResource( 3 )]

[node name="PC_Senn" parent="Battlefield" instance=ExtResource( 4 )]

[node name="NPC_ExEnemy" parent="Battlefield" instance=ExtResource( 6 )]
